# fake_accounts_detection

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  app.py  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
models/predict_model/: xgb_clf_best_0613.model
tg_parser/: utils.py
tg_parser/data/: feature_engineering.py
tg_parser/models/: inference.py
